Resolves: tdf#96072 export Chart format codes in Excel notation

As for the change in chart2/qa/extras/chart2export.cxx
Chart2ExportTest::testAxisNumberFormatXLSX() unit test: also Excel
writes string parts of format codes quoted, including minus sign in
negative subformat.

Change-Id: I201bb012df818129cbc65de0eee8eca59e57d829